test/tests/PostconditionBadPost.expected
PostconditionBadPost.frost:12:13: error: cannot use '@post' in a method which overrides another method; did you mean '@postAnd'?
1 error
