test/tests/PostconditionBadPost.frost
@extendable
class PostconditionBadPost1 {
    var x := 0

    @extendable
    @post(x > 0)
    method test(x:Int) {
        self.x := x
    }
}

class PostconditionBadPost2 : PostconditionBadPost1 {
    @override
    @post(x > 0)
    method test(x:Int) {
        self.x := x
    }

}